--- a/nginx.conf
+++ b/nginx.conf
@@ -93,10 +93,11 @@ http {
     }
 
     location / {
-      try_files $uri/index.html $uri.html $uri @app;
+      try_files $uri $uri/index.html;
     }
 
-    location @app {
+
+    location /api/ {
       # an HTTP header important enough to have its own Wikipedia entry:
       #   https://en.wikipedia.org/wiki/X-Forwarded-For
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
