--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.0",
     "install": "^0.13.0",
     "mongoose": "^5.7.7",
+    "nodemailer": "^6.3.1",
     "npm": "^6.12.0"
   }
 }
