--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   "author": "Sabelo Mhlambi",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.1.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "nodemailer": "^6.3.1",
-    "npm": "^6.12.0"
+    "npm": "^6.12.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0"
   }
 }
