--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "nodemailer": "^6.3.1",
-    "npm": "^6.12.0",
-    "passport": "^0.4.0",
-    "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0"
+    "npm": "^6.12.0"
   }
 }
