default pages to html if extension not provided and prefix isn't /api

--- a/nginx.conf
+++ b/nginx.conf
@@ -93,7 +93,7 @@ http {
     }
 
     location / {
-      try_files $uri $uri/index.html;
+      try_files $uri $uri.html $uri/index.html;
     }
 
 
