--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
+    "express-validator": "^6.2.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "nodemailer": "^6.3.1",
-    "npm": "^6.12.0"
+    "npm": "^6.12.0",
+    "shortid": "^2.2.15"
   }
 }
