--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sabelo Mhlambi",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.1.0",
