add s3 image upload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,10 @@ services:
      - SENDGRID_EMAIL_KEY=${SENDGRID_EMAIL_KEY}
      - SENDGRID_EMAIL_ADDRESS=${SENDGRID_EMAIL_ADDRESS}
      - COMPANY_NAME=${COMPANY_NAME}
+     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+     - S3_BUCKET=${S3_BUCKET}
+     - AWS_REGION=${AWS_REGION}
      - HOST=${HOST}
     ports:
       - "8080:8080"
