--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
      - MONGODB_LOCAL_URI=mongodb://mongo:27017/test
      - JWTSECRET=${JWTSECRET}
      - SESSION_SECRET=${SESSION_SECRET}
-     - SENDGRID_EMAIL_KEY=${SENDGRID_EMAIL_KEY}
+     - SENDGRID_API_KEY=${SENDGRID_API_KEY}
      - SENDGRID_EMAIL_ADDRESS=${SENDGRID_EMAIL_ADDRESS}
      - COMPANY_NAME=${COMPANY_NAME}
      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
