--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Sabelo Mhlambi",
   "license": "ISC",
@@ -24,5 +24,11 @@
     "nodemailer": "^6.4.2",
     "npm": "^6.12.0",
     "shortid": "^2.2.15"
-  }
+  }, "devDependencies": {
+      "@shelf/jest-mongodb": "^1.1.3",
+      "jest": "^25.1.0"
+  },
+  "jest": {
+     "preset": "@shelf/jest-mongodb"
+   }
 }
