install parse server & dashboard

--- a/nginx.conf
+++ b/nginx.conf
@@ -88,7 +88,7 @@ http {
     # data copies from the application server.
 
     # all static files, search in default static directory
-    location ~* \.(html|js|jpg|png|css)$ {
+    location ~* \.(html|js|png|css)$ {
         expires 30d;
     }
 
