--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^5.7.7",
     "nodemailer": "^6.4.2",
     "npm": "^6.12.0",
+    "parse-dashboard": "^2.1.0",
+    "parse-server": "^4.2.0",
     "shortid": "^2.2.15"
   }, "devDependencies": {
       "@shelf/jest-mongodb": "^1.1.3",
